[HB-10] Update Budget fields, calculations, filters, add scopes and maximum budget feature
