# app/controllers/users/remaining_budgets_controller.rb
@@ -1,0 +1,7 @@
+module Users
+  class RemainingBudgetsController < ApplicationController
+    def show
+      render json: { remaining_budget: current_user.remaining_budget }, status: :ok
+    end
+  end
+end
