# app/serializers/user_serializer.rb
@@ -1,4 +1,4 @@
 class UserSerializer
   include JSONAPI::Serializer
-  attributes :id, :first_name, :last_name, :email, :budget
+  attributes :id, :first_name, :last_name, :email, :remaining_budget, :maximum_budget
 end
